--- a/lessons/Part3.Rmd
+++ b/lessons/Part3.Rmd
@@ -9,6 +9,10 @@ output:
     fig_height: 7
 ---
 
+We will dive into additional tools within the tidyverse to make data wrangling easier and more efficient. To that end, we will cover how to use our `dplyr` and `tidyr` functions within functions. In the process, we will gain insight into the tidy eval data-masking framework, how it works, and how to make it work for us. 
+
+We will also see how to apply functions over multiple files with functional programming via the `purrr` package. 
+
 ## Wrangling Functions 
 
 ## Purrring 
